vertical align fix

--- a/ui/app/stylesheets/generic/base.sass
+++ b/ui/app/stylesheets/generic/base.sass
@@ -1,13 +1,16 @@
 html, body
   margin: 0
 
+html
+  height: 100%
+
 body
-  +display(flex)
-  +align-items(center)
-  +justify-content(center)
-  min-height: 100vh
+  display: table
+  min-height: 100%
+  width: 100%
 
 .page
   +padding(40px null)
-  width: 100%
+  display: table-cell
+  vertical-align: middle
   overflow: hidden
